--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!-- Profile picture-->
 <img src="profile-picture.jpg" alt="profile picture" class="profile-picture">
 <!-- Profile name-->
-<div class="profile-name">Inspiring climate action</div>
+<div class="profile-name">This is tha change I've made!</div>
 <!-- Links-->
 
 <a href="https://action.wearepossible.org/page/121316/action/1" class="links">Tell the government to unblock wind</a>
