--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
-<title>TrinkLee</title>
+<title>Possible Linktree</title>
 </head>
 <body>
 <!-- Profile picture-->
 <img src="profile-picture.jpg" alt="profile picture" class="profile-picture">
 <!-- Profile name-->
-<div class="profile-name">This is tha change I've made!</div>
+<div class="profile-name">Inspiring Climate Action</div>
 <!-- Links-->
 
 <a href="https://action.wearepossible.org/page/121316/action/1" class="links">Tell the government to unblock wind</a>
@@ -19,6 +19,5 @@
 <a href="https://action.wearepossible.org/page/66335/subscribe/1" class="links">Join our mailing list</a>
 <a href="https://action.wearepossible.org/page/66434/donate/1" class="links">Donate to possible</a>
 <!-- Logo -->
-<div class="bottom-text">APPLES</div>
 </body>
 </html>
